已比對兩者class 檔案
log OK